--- a/backend/med/templates/base.html
+++ b/backend/med/templates/base.html
@@ -229,7 +229,7 @@
   <div id="chatbot-header">Sp Assistant</div>
   <div id="chatbot-messages"></div>
   <div id="chatbot-input-area">
-    <input id="chatbot-input" type="text" placeholder="Please Submit Product ID" />
+    <input id="chatbot-input" type="text" placeholder="Ask me..." />
     <button id="chatbot-send">Send</button>
   </div>
 </div>
